--- a/UW-D3-tutorial/index.html
+++ b/UW-D3-tutorial/index.html
@@ -6,7 +6,7 @@
 <script type="module">
 
 import {Runtime, Inspector} from "./runtime.js";
-import define from "./d/776f0a3c5ed76ab9.js";
+import define from "./@uwdata/introduction-to-d3.js";
 
 const runtime = new Runtime();
 const main = runtime.module(define, Inspector.into(document.body));
